# sentiment-volume-trading

./: .gitignore  LLM工具協作記錄.docx  README.md  build_llm_log.js  build_notebook.py  build_report.js  price_2330.csv  pyproject.toml  情緒聲量_2330_前處理資料集.csv  情緒聲量投資交易.ipynb  期末書面報告.docx  說明.md
