[project]
name = "sentiment-volume-trading"
version = "1.0.0"
description = "情緒聲量投資交易 — 以 PTT GPT 情緒標註預測台積電(2330)隔日漲跌之機器學習量化策略（機器學習期末專題）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "yfinance>=0.2.40",
    "gdown>=5.0",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "nbconvert>=7.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
